fix: LSDV-5162: Fix shifting of annotation tabs on hover (#1395)
* fix: LSDV-5162: Fix shifting of annotation tabs on hover

* test: LSDV-5162: Add test for shifting of annotation tabs on hover

--- a/src/components/AnnotationsCarousel/AnnotationButton.styl
+++ b/src/components/AnnotationsCarousel/AnnotationButton.styl
@@ -48,7 +48,7 @@
 
   &:hover
     background-color rgba(9, 109, 217, 0.12)
-    border 1px solid rgba(9, 109, 217, 0.16)
+    border-color rgba(9, 109, 217, 0.16)
     border-bottom-color transparent
     .annotation-button__ellipsisIcon
       visibility visible
